--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://neonafro.github.io/tic-toe-tat",
   "name": "react.dev",
   "version": "0.0.0",
   "main": "/src/index.js",
